# cbt

./: .gitmodules  CMakeLists.txt  README.md
shaders/: cbt_shared.h  dispatcher.hlsl  shaders.cfg  shaders.hlsl  subdivision.hlsl  sum_reduction.hlsl  target.hlsl  triangles.hlsl
source/: main.cpp
